support gpt-4o-audio-preview-2024-10-01